finally got the toc

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -65,7 +65,7 @@
     <script type="text/javascript">
       $('.toc').toc({
         'selectors': 'h2', //elements to use as headings
-        'container': '.page-content', //element to find all selectors in
+        'container': '#page-wrapper', //element to find all selectors in
         'smoothScrolling': true, //enable or disable smooth scrolling on click
         'prefix': 'toc', //prefix for anchor tags and class names
         'onHighlight': function(el) {}, //called when a new section is highlighted 
