--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -148,6 +148,7 @@
 		}
 	}
 	.toc {
+		
 		@include media($medium) {
 			@include row($direction: RTL);
 		}
@@ -321,6 +322,8 @@
 // table of contents
 .toc {
 	min-height: 1px;
+	float: right;
+	display: block;	
 	ul {
 		margin-top: $gutter;
 		border: 1px solid $border-color;
