--- a/_sass/_notices.scss
+++ b/_sass/_notices.scss
@@ -18,7 +18,7 @@
 	@include notice($primary-color);
 }
 .notice-inverse {
-	@include notice($white);
+	@include notice($grey);
 	color: $text-color;
 	a {
 		color: $text-color;
