--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -115,7 +115,7 @@
 // --------------------------------------------------
 
 #page-wrapper {
-	padding: 30 + $gutter; // add white space for smaller screens
+	padding: 30 - $gutter; // add white space for smaller screens
 	@include size(100% 100%);
 	-webkit-overflow-scrolling: touch;
 	z-index: 2;
