--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -116,6 +116,7 @@
 
 #page-wrapper {
 	padding: $gutter; // add white space for smaller screens
+	width: 90px;
 	@include size(100% 100%);
 	-webkit-overflow-scrolling: touch;
 	z-index: 2;
