--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -116,7 +116,7 @@
 
 #page-wrapper {
 	padding: $gutter; // add white space for smaller screens
-	@include size(90px 100%);
+	@include size(90% 100%);
 	-webkit-overflow-scrolling: touch;
 	z-index: 2;
 	@include transform(translate(0,0));
