--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -117,7 +117,7 @@
 #page-wrapper {
 	padding: $gutter; // add white space for smaller screens
 	@include size(50% 100%);
-	@include position (relative);
+	@include position absolute;
 	-webkit-overflow-scrolling: touch;
 	z-index: 2;
 	@include transform(translate(0,0));
