--- a/_layouts/media.html
+++ b/_layouts/media.html
@@ -16,7 +16,7 @@ layout: media
 		<div class="page-title">
 			<h1>{{ page.title }}</h1>
 		</div>
-		<div class="page-lead">
+		<div class="inner-wrap">
 			<nav class="toc"></nav><!-- /.toc -->
 			<div id="content" class="page-content" itemprop="articleBody">
 				{{ content }}
