--- a/_layouts/media.html
+++ b/_layouts/media.html
@@ -18,7 +18,7 @@ layout: default
 		</div>
 		<div class="inner-wrap">
 			<nav class="toc"></nav><!-- /.toc -->
-			<div id="content" class="page-content" itemprop="articleBody">
+			<div id="content">
 				{{ content }}
 				<hr />
 				<footer class="page-footer">
