--- a/_layouts/media.html
+++ b/_layouts/media.html
@@ -16,9 +16,8 @@ layout: default
 		<div class="page-title">
 			<h1>{{ page.title }}</h1>
 		</div>
-		<div class="inner-wrap">
 			<nav class="toc"></nav><!-- /.toc -->
-			<div class="page-lead">
+			<div id="content" class="page-content" itemprop="articleBody">
 				{{ content }}
 				<hr />
 				<footer class="page-footer">
@@ -29,7 +28,6 @@ layout: default
 					{% if page.comments == true %}{% include comments.html %}{% endif %}
 				</aside>
 			</div><!-- /.content -->
-		</div><!-- /.inner-wrap -->
 		{% if page.ads == true %}<div class="ads">{% include advertising.html %}</div><!-- /.ads -->{% endif %}
 	</article><!-- /.wrap -->
 </div><!-- /#main -->
