--- a/_layouts/media.html
+++ b/_layouts/media.html
@@ -3,7 +3,7 @@ layout: default
 ---
 
 <div id="main" role="main">
-	<article class="wrap" itemscope itemtype="http://schema.org/Article">
+	<!--<article class="wrap" itemscope itemtype="http://schema.org/Article">-->
 		{% if page.image.feature %}
 		<div class="page-feature">
 			<div class="page-image">
@@ -16,6 +16,7 @@ layout: default
 		<div class="page-title">
 			<h1>{{ page.title }}</h1>
 		</div>
+		<!-- <div class="inner-wrap">-->
 			<nav class="toc"></nav><!-- /.toc -->
 			<div id="content" class="page-content" itemprop="articleBody">
 				{{ content }}
@@ -28,6 +29,7 @@ layout: default
 					{% if page.comments == true %}{% include comments.html %}{% endif %}
 				</aside>
 			</div><!-- /.content -->
+			<!--</div> /.inner-wrap -->
 		{% if page.ads == true %}<div class="ads">{% include advertising.html %}</div><!-- /.ads -->{% endif %}
-	</article><!-- /.wrap -->
+	<!--</article> /.wrap -->
 </div><!-- /#main -->
