--- a/_layouts/media.html
+++ b/_layouts/media.html
@@ -17,8 +17,8 @@ layout: default
 			<h1>{{ page.title }}</h1>
 		</div>
 		<!-- <div class="inner-wrap">-->
-			<nav class="toc"></nav><!-- /.toc -->
-			<div id="content" class="page-content" itemprop="articleBody">
+			<!-- <nav class="toc"></nav><!-- /.toc -->
+			<div id="content" class="page-lead" itemprop="articleBody">
 				{{ content }}
 				<hr />
 				<footer class="page-footer">
