--- a/_layouts/media.html
+++ b/_layouts/media.html
@@ -1,5 +1,5 @@
 ---
-layout: default
+layout: media
 ---
 
 <div id="main" role="main">
@@ -30,6 +30,5 @@ layout: default
 				</aside>
 			</div><!-- /.content -->
 			<!--</div> /.inner-wrap -->
-		{% if page.ads == true %}<div class="ads">{% include advertising.html %}</div><!-- /.ads -->{% endif %}
 	<!--</article> /.wrap -->
 </div><!-- /#main -->
