--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -49,7 +49,7 @@
   <body>
     {% include header.html %}
     {% include navigation-sliding.html %}
-    <div id= "main"></div>
+    <div id= "main" role="main"></div>
     <div id="page-wrapper">
       {% include browser-upgrade.html %}
 
