--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -49,7 +49,7 @@
   <body>
     {% include header.html %}
     {% include navigation-sliding.html %}
-    
+	<nav class="toc"></nav> 
     <div id="page-wrapper">
       {% include browser-upgrade.html %}
 
