--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -326,7 +326,9 @@
 .toc {
 	min-height: 1px;
 	float: right;
-	display: block;	
+	display: block;
+	position: fixed;
+	right: $gutter;	
 	ul {
 		margin-top: $gutter;
 		border: 1px solid $border-color;
