--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -129,6 +129,12 @@
 	}
 }
 
+@media screen and (max-width: 800px) {
+  #wrapper {
+    width: 90%;
+    min-width: 0;
+  }
+}
 
 // BROWSER UPGRADE
 // --------------------------------------------------
