--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -127,12 +127,6 @@
 	&.slide {
 		@include transform(translate(-60rem,0));
 	}
-	@media screen and (max-width: 800px) {
-	 	#page-wrapper {
-	 	width: 90%;
-	 	min-width: 0;
-  		}
-	}
 }
 
 // BROWSER UPGRADE
@@ -355,6 +349,10 @@
 			background: lighten($border-color,5);
 		}
 	}
+    @media all and (max-width: 800px) {
+
+    .content .toc{display:none;}
+    }
 }
 // tiles
 .tile {
