--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -349,8 +349,8 @@
 			background: lighten($border-color,5);
 		}
 	}
-    @include media {max-width: 800px} {
-    .content .toc{display:none}
+    @include media {@include max-width: 800px} {
+    .toc{display:none}
     }
 }
 // tiles
