--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -22,7 +22,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 h1 {
 	@include font-size(48);
-	text-align: center;
+	@include text-align: center;
 }
 h2 {
 	@include font-size(32);
