--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -61,7 +61,7 @@
     <script src="{{ site.url }}/js/vendor/jquery-1.9.1.min.js"></script>
     <script src="{{ site.url }}/js/main.js"></script>
     
-    {% if page.toc == true %}
+    <!--{% if page.toc == true %}
     <script type="text/javascript">
       $('.toc').toc({
         'selectors': 'h2', //elements to use as headings
@@ -82,7 +82,7 @@
         }
       });
     </script>
-    {% endif %}
+    {% endif %}-->
 
   </body>
 
