--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -51,10 +51,11 @@
     {% include navigation-sliding.html %}
     <div id="page-wrapper">
       {% include browser-upgrade.html %}
-
+    <div class="inner-wrap">
       {{ content }}
-
+    </div>
       {% include footer.html %}
+        
     </div>
 
     <script src="{{ site.url }}/js/vendor/jquery-1.9.1.min.js"></script>
