--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -52,7 +52,9 @@
     <div id="page-wrapper">
       {% include browser-upgrade.html %}
     <div class="inner-wrap">
+      <div id="content" class="page-content" itemprop="articleBody">
       {{ content }}
+      </div>
     </div>
       {% include footer.html %}
         
