--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -52,7 +52,7 @@
     <div id="page-wrapper">
       {% include browser-upgrade.html %}
     <div class="inner-wrap">
-      <div id="content" class="page-content" itemprop="articleBody">
+      <div id="content" class="page-content">
       {{ content }}
       </div>
     </div>
