--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -326,7 +326,8 @@
 	min-height: 1px;
 	float: right;
 	display: block;
-	right: $gutter;	
+	right: $gutter;
+	margin-left:auto;
 	ul {
 		margin-top: $gutter;
 		border: 1px solid $border-color;
