--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -53,7 +53,9 @@
      <div id="main">
       {% include browser-upgrade.html %}
       <div class="inner-wrap">
-       {{ content }}
+       <div id="content" div class="page-content">
+        {{ content }}
+       </div>
       </div>
      </div>
       {% include footer.html %}
