--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -53,7 +53,7 @@
      <div id="main">
       {% include browser-upgrade.html %}
       <div class="inner-wrap">
-       <div id="content" div class="page-content">
+       <div id="content">
         {{ content }}
        </div>
       </div>
