--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -327,7 +327,8 @@
 	float: right;
 	display: block;
 	right: $gutter;
-	margin-left:auto;
+	margin-left: auto;
+	margin-bottom: 1000px;
 	ul {
 		margin-top: $gutter;
 		border: 1px solid $border-color;
