--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -328,7 +328,7 @@
 	display: block;
 	right: $gutter;
 	margin-left: auto;
-	margin-bottom: 1000px;
+	margin-bottom: auto;
 	ul {
 		margin-top: $gutter;
 		border: 1px solid $border-color;
