--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -324,7 +324,7 @@
 // table of contents
 .toc {
 	min-height: 1px;
-	float: right;
+	float: center;
 	position: relative;
 	display: block;
 	right: $gutter;
