--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -324,11 +324,10 @@
 // table of contents
 .toc {
 	min-height: 1px;
-	float: center;
-	position: relative;
 	display: block;
 	right: $gutter;
 	margin-left: auto;
+	margin-right: auto;
 	margin-bottom: auto;
 	ul {
 		margin-top: $gutter;
