--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -52,7 +52,7 @@
     <div id="page-wrapper">
      <div id="main">
       {% include browser-upgrade.html %}
-      <nav class="toc" position: fixed></nav>
+      <nav class="toc"></nav>
       <div class="inner-wrap">
        <div id="content">
         {{ content }}
