--- a/_sass/_sliding-menu.scss
+++ b/_sass/_sliding-menu.scss
@@ -7,9 +7,9 @@
 	top: $gutter;
 	right: $gutter;
 	display: block;
-	width: $button-size * 2;
+	width: 50%;
 	height: $button-size * 2;
-	background: #000;
+	background: #336799;
 	outline: 0;
 	padding: 0;
 	border: 2.5px solid transparent;
