--- a/_sass/_sliding-menu.scss
+++ b/_sass/_sliding-menu.scss
@@ -7,7 +7,7 @@
 	top: $gutter;
 	right: $gutter;
 	display: block;
-	width: 50%;
+	width: $button-size * 2;
 	height: $button-size * 2;
 	background: #336799;
 	outline: 0;
