--- a/_sass/_sliding-menu.scss
+++ b/_sass/_sliding-menu.scss
@@ -35,12 +35,13 @@
 	top: 0;
 	right: 0;
 	padding: em(22) 0;
+	background: #336799;
 	text-align: center;
 	visibility: hidden;
 	@include media($medium) {
 		text-align: left;
 	}
-	@include size(100% 100%);
+	@include size(50% 100%);
 	@include media($medium) {
 		@include size(87% 100%);
 	}
